--- a/CIE/cie.html
+++ b/CIE/cie.html
@@ -1,9 +1,12 @@
 <html>
     <head>
+        <link rel="stylesheet" href="cie.css">
         <title>this is devops lab</title>
     </head>
     <body>
         <p>This is pushing of code</p>
+        <h2>this is my web page</h2>
+        <h3> new website</h3>
     </body>
 </html>
 
